--- a/style.css
+++ b/style.css
@@ -217,10 +217,10 @@ header .intro-text .skills {
     /*    border-left: 10px;*/
     /*}*/
 
-    #article .cv-item div {
-        padding-left: 5px;
-        padding-right: 5px;
-    }
+    /*#article .cv-item div {*/
+    /*    padding-left: 5px;*/
+    /*    padding-right: 5px;*/
+    /*}*/
 
     #article .cv-item h4 {
         margin-top: 7px;
